[gd_scene load_steps=6 format=3 uid="uid://37at2tgfuh0m"]

[ext_resource type="Script" uid="uid://bao67juwu5qb5" path="res://player/zombie/zombie_remote.gd" id="1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.4
height = 1.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_head"]
radius = 0.3
height = 0.6

[sub_resource type="ViewportTexture" id="ViewportTexture_1"]
viewport_path = NodePath("HealthBarContainer/SubViewport")

[sub_resource type="StandardMaterial3D" id="HeadshotMaterial"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0, 0, 0.3)
disable_receive_shadows = true

[node name="ZombieRemote" type="Node3D"]
script = ExtResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="HeadMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("CapsuleMesh_head")

[node name="HealthBarContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)

[node name="SubViewport" type="SubViewport" parent="HealthBarContainer"]
transparent_bg = true
size = Vector2i(200, 20)

[node name="HealthBar" type="ProgressBar" parent="HealthBarContainer/SubViewport"]
offset_right = 200.0
offset_bottom = 20.0
value = 100.0
show_percentage = false

[node name="Sprite3D" type="Sprite3D" parent="HealthBarContainer"]
billboard = 1
texture = SubResource("ViewportTexture_1")

[node name="HeadshotZone" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("CapsuleMesh_head")
surface_material_override/0 = SubResource("HeadshotMaterial")
